--- a/vakcinisani/templates/base.html
+++ b/vakcinisani/templates/base.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
-
+    {% block style %}
+    {% endblock %}
      <title>Vakcinisani</title>
   </head>
   <body>
