--- a/vakcinisani/templates/lista.html
+++ b/vakcinisani/templates/lista.html
@@ -1,5 +1,43 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block style %}
+<style>
+  .modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: float-end;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+</style>
+{% endblock %}
+
 
 {% block list %}
 <div class="container">
@@ -26,7 +64,7 @@
 <div class="modal myModal">
 <!-- Modal content -->
 <div class="modal-content">
-  <span class="close float-end">&times;</span>
+  <span class="close">&times;</span>
     <h5>Upisite Vasu bolest</h5>
     <form class="form-control" method="POST">
       {% csrf_token %}
@@ -43,8 +81,8 @@
         <label for="{{ bolest.vakcinisani_id.id_for_label }}" class="form-label">Vakcinisani ID: </label>
         {{ bolest.vakcinisani_id }}
       </div>
-      <input type="button" value="Zatvori">
-      <input type="submit" name="" value="Submit">
+      <button type="button" class="close-btn btn btn-sm btn-secondary">Close</button>
+      <input type="submit" name="" class="btn btn-sm btn-info" value="Submit">
     </form>
 
   </div>
@@ -56,7 +94,7 @@
     {% for i in kreirani %}
     <li class="list-group-item"><span style='display:none' id="za_tippy-{{i.id}}">{{i.ime}} <br> {{i.prezime}} <br> {{i.vakcina}} <br> {{i.jmbg}} </span>{{i.ime}} {{i.prezime}} <i class="fas fa-long-arrow-alt-right"></i>
        <span class="vakcina_oboji {% if i.vakcina == 'Sinofarm' %} sinofarm {% endif %} ">{{i.vakcina}}</span>
-       <button type="button" class="btn btn-secondary float-end btn-sm ms-1 openmodal myBtn" name="button">Dodaj bolest</button>
+       <button type="button" class="btn btn-secondary float-end btn-sm ms-1 openmodal myBtn"  name="button">Dodaj bolest</button>
        <a class="btn btn-warning float-end btn-sm ms-1 btn-tippy-2" data-template="za_tippy-{{i.id}}" href="{% url 'edit' i.id %}">Uredi</a>
        <a class="btn btn-primary float-end btn-sm ms-1 btn-tippy" data-template="za_tippy-{{i.id}}" href="{% url 'vakcinisan' i.id %}">Detalji</a>
 
