--- a/vakcinisani/templates/home.html
+++ b/vakcinisani/templates/home.html
@@ -47,7 +47,12 @@
   </div>
 {% endblock %}
 
-
+{% block footer %}
+<footer>
+  <div class="text-center p-3" id="absolute" style="background-color: rgba(0, 0, 0, 0.2);">
+  © 2021 Copyright: Vaccine</div>
+</footer>
+{% endblock %}
 
 
 {% block scripts %}
