--- a/vakcinisani/templates/lista.html
+++ b/vakcinisani/templates/lista.html
@@ -73,13 +73,10 @@
         <label for="{{ bolest.ime_bolesti.id_for_label }}" class="form-label">Ime bolesti: </label>
         {{ bolest.ime_bolesti }}
       </div>
+      
       <div class="mb-2">
-        <label for="{{ bolest.datum_dijagnostike.id_for_label }}" class="form-label">Datum dijagnostike: </label>
-        {{ bolest.datum_dijagnostike }}
-      </div>
-      <div class="mb-2">
-        <label for="{{ bolest.vakcinisani_id.id_for_label }}" class="form-label">Vakcinisani ID: </label>
-        {{ bolest.vakcinisani_id }}
+        <label for="{{ bolest.ime_doktora.id_for_label }}" class="form-label">Ime doktora: </label>
+        {{ bolest.ime_doktora }}
       </div>
       <button type="button" class="close-btn btn btn-sm btn-secondary">Close</button>
       <input type="submit" name="" class="btn btn-sm btn-info" value="Submit">
