--- a/vakcinisani/templates/obavesti_korisnika.html
+++ b/vakcinisani/templates/obavesti_korisnika.html
@@ -26,13 +26,10 @@
           {{ form.poruka }}
         </div>
         <div class="mb-3">
-          <label for="{{ form.datum.id_for_label }}" class="form-label">Datum: </label>
+          <label for="{{ form.datum.id_for_label }}" class="form-label">Datum i vreme: </label>
           {{ form.datum }}
         </div>
-        <div class="mb-3">
-          <label for="{{ form.vreme.id_for_label }}" class="form-label">Vreme: </label>
-          {{ form.vreme }}
-        </div>
+
         <input type="submit" value="Posalji" class="btn btn-primary form-control">
     </form>
 
