--- a/vakcinisani/templates/home.html
+++ b/vakcinisani/templates/home.html
@@ -37,10 +37,10 @@
         <div class="col col-sm text-end">
           <br>
           <hr>
-          <p style="font-weight:bold">Talk from a safe distance</p>
-          <p>Wear mask</p>
-          <p>Wash hands</p>
-          <p>Stay safe</p>
+          <p class="firstPage-paragraph" style="font-weight:bold">Talk from a safe distance</p>
+          <p class="firstPage-paragraph">Wear mask</p>
+          <p class="firstPage-paragraph">Wash hands</p>
+          <p class="firstPage-paragraph">Stay safe</p>
         </div>
 
       </div>
