--- a/vakcinisani/templates/vakcinisan.html
+++ b/vakcinisani/templates/vakcinisan.html
@@ -12,6 +12,8 @@
     <li class="list-group-item"><span class="detalji_span">Prezime:</span> {{vakcinisan.prezime}}</li>
     <li class="list-group-item"><span class="detalji_span">Maticni broj:</span> {{vakcinisan.jmbg}}</li>
     <li class="list-group-item"><span class="detalji_span">Vakcina:</span> {{vakcinisan.vakcina}}</li>
+    <li class="list-group-item"><span class="detalji_span">Dijagnostikkovana bolest:</span> {{vakcinisan.bolest_id}}</li>
+
   </ul>
 </div>
 
