--- a/vakcinisani/templates/novi_pacijent.html
+++ b/vakcinisani/templates/novi_pacijent.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
 {% block content %}
 
 <div class="container">
@@ -52,6 +53,11 @@
           </div>
 
           <div class="mb-3">
+            <label for="{{ form.bolest_id.id_for_label }}" class="form-label">Dijagnostikovana bolest: </label>
+            {{ form.bolest_id }}
+          </div>
+
+          <div class="mb-3">
             <label for="{{ form.alergija.id_for_label }}" class="form-label">Da li ste alergicni?(Cekirajte polje ako jeste) </label>
             {{ form.alergija }}
           </div>
@@ -87,6 +93,8 @@
     <div class="col-sm float-end"">
       <br><br>
       <img src="{% static '/images/forma_slika.jpg' %}" class="img-fluid ms-5" alt="Responsive image" height="30%" >
+      <br> <br>
+      <p><u>Napomena:</u> Ukoliko imane dijagonostikovanu neku bolest koje nema na listi, idite na sledeci <a href="{% url 'bolest' %}" id="tippy-link">link</a></p>
     </div>
 
   </div>
@@ -134,7 +142,14 @@ function disabled_funkcija() {
 }
 alergija_check_box.addEventListener('click', disabled_funkcija);
 
-
-
 </script>
+
+<script type="text/javascript">
+  tippy('#tippy-link', {
+    content: "Dodaj bolest",
+    placement: 'right',
+    animation: 'scale',
+});
+</script>
+
 {% endblock %}
