--- a/vakcinisani/templates/bolest.html
+++ b/vakcinisani/templates/bolest.html
@@ -2,49 +2,28 @@
 {% load static %}
 
 
-
-
 {% block content %}
 <div class="container">
   <div class="row">
     <div class="col">
-
-      <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary m-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Dodaj bolest
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Dodaj bolest</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form class="" action="" method="post">
-          {% csrf_token %}
+      <!-- dugme za modal i content modala -->
+      <button id="modal-za-bolest" type="button" name="button">Dodaj bolest</button>
+      <div class="modal-bg">
+        <div class="modal-bolest">
+          <h2>Dodaj bolest</h2>
+          <span class="zatvori-modal">X</span>
+          <form class="" action="" method="post">
+            {% csrf_token %}
             {{form.as_p}}
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Dodaj</button>
-          </div>
-        </form>
-
+            <button type="submit" id="submit-dugme" class="dugme-u-modalu">Dodaj</button>
+          </form>
+        </div>
       </div>
-
     </div>
   </div>
-</div>
 
-      </div>
-    </div>
-
-
+<!-- tabela sa izlistanim bolestima -->
   <div class="col">
-
-
     <table class="table">
       <thead>
         <tr>
@@ -54,21 +33,18 @@
           <th>Detalji</th>
         </tr>
       </thead>
-    <tbody>
-      {% for i in bolesti %}
-      <tr>
-        <td id="detalji-tippy-{{i.id}}">{{i.ime_bolesti}}</td>
-        <td>{{i.ime_doktora}}</td>
-        <td><a class="btn btn-warning btn-sm" href="{% url 'izmeni_bolest' i.id %}">Izmeni</a></td>
-        <td><a class="btn btn-info btn-sm detalji-tippy" data-template="detalji-tippy-{{i.id}}" href="{% url 'detalji_bolest' i.id %}">Detalji</a></td>
-
-      </tr>
-      {% endfor %}
-    </tbody>
-
+      <tbody>
+        {% for i in bolesti %}
+        <tr>
+          <td id="detalji-tippy-{{i.id}}">{{i.ime_bolesti}}</td>
+          <td>{{i.ime_doktora}}</td>
+          <td><a class="btn btn-warning btn-sm" href="{% url 'izmeni_bolest' i.id %}">Izmeni</a></td>
+          <td><a class="btn btn-info btn-sm detalji-tippy" data-template="detalji-tippy-{{i.id}}" href="{% url 'detalji_bolest' i.id %}">Detalji</a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
     </table>
   </div>
-
 </div>
 {% endblock %}
 
@@ -76,6 +52,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://unpkg.com/tippy.js@6"></script>
+<script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+
+
 <script type="text/javascript">
 
     tippy('.detalji-tippy', {
@@ -90,5 +69,44 @@
       theme: 'light',
     });
 </script>
+
+<script type="text/javascript">
+  //modal na stranici bolest
+  var modalDugme = document.getElementById('modal-za-bolest');
+  var modalBg = document.getElementsByClassName('modal-bg')[0];
+  var spanClose =document.getElementsByClassName('zatvori-modal')[0];
+
+  console.log(modalBg);
+  modalDugme.addEventListener('click', function(){
+    modalBg.classList.add('bg-active');
+  });
+
+  spanClose.addEventListener('click', function(){
+    modalBg.classList.remove('bg-active');
+  })
+  </script>
+
+
+<!-- ovo je za ajax -->
+<!-- <script type="text/javascript">
+var submitBtn = document.getElementById('submit-dugme');
+submitBtn.onclick = function(e){
+  e.preventDefault();
+  var javascriptForma = $(this).closest('form');
+  var jqueryForma = $(javascriptForma);
+  var data = jqueryForma.serialize();
+  console.log("data", data);
+  $.ajax({
+      type:'POST',
+      url: 'dodaj-novu-bolest/',
+      data:data,
+      success:function(){
+        alert("Kreirana nova bolest");
+
+      }
+    });
+  };
+
+</script> -->
 
 {% endblock %}
